# DroneManager

./: .gitignore  README.md  TEMP_DEMO.py  app.py  betterparser.py  drone start up command.txt  dronecontrol.py  dronecontrol_dummy.py  drones.py  gazebo_test.py  gmpdemo.py  mavpassthrough.py  multiple_aircraft_fly_circlesMassa2.py  package-lock.json  package.json  pymavlinksnooper.py  pyproject.toml  redcross.py  tailwind.css  udp_receiver.py  udp_sender (2).py  udp_sender.py  udp_transporter.py  web_server.py  widgets.py
Documents/GIT/FrontEnd (1)/: package.json
Scripts/: TEMP_DEMO.py  battery_swap.py
backend/: .gitignore  README.md  TEMP_DEMO.py  main.py  models.py  requirements.txt
backend/dronecontrol/: app.py  drone.py  dronemanager.py  gimbal.py  mavpassthrough.py  plugins.py
backend/dronecontrol/navigation/: core.py  directsetpointfollower.py  directtargetgenerator.py  velocityfollower.py
frontend/: .gitignore  index.html  package-lock.json
frontend/src/data/: droneData.ts
frontend/src/types/: drone.ts
src/api/: useFetch.ts  usePost.ts
src/components/drones/: DroneCard.tsx  DroneCardsSidebar.tsx  DroneMarker.tsx  types.ts
src/components/layout/: Header.tsx  SubHeader.tsx
src/components/map/: MapCircle.tsx  MapTypeSelector.tsx  MapView.tsx  types.ts
src/data/: droneData.ts  mapData.ts
src/dronecontrol/: GMP3.py  app.py  drone.py  dronemanager.py  formations.py  gimbal.py  mavpassthrough.py  plugin.py  plugins.py  redcross.py  scripts.py  utils.py  widgets.py
src/dronecontrol/missions/: uam.py
src/dronecontrol/navigation/: GMP3.py  core.py  (+5 more)
src/hooks/: useWebSocket.ts
src/stores/: connection-store.tsx
static/: index.html
(+38 files in other folders)
